feat: add pricing and admin api
