# src/app/routes/v1.router.ts
@@ -7,6 +7,10 @@ const v1 = Router();
 v1.get('/ping', (_req, res) => res.json({ pong: true }));
 v1.use('/auth', authRouter);
 v1.use('/warehouses', warehousesRouter);
+
+// admin routes
+import adminPricingRouter from '../../modules/pricing/http/admin.pricing.router';
+v1.use('/admin/pricing', adminPricingRouter);
 // v1.use("/orders", ordersRouter); // later
 
 export default v1;
